examples/test/testpolicy8382.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8382
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key40: value15
      key44: value29
      key14: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value40
          key4: value35
          key17: value43
      podSelector:
        matchLabels:
          key44: value39
          key25: value34
